# multilingual-chatbot-arena

./: .env.example  .gitignore  Makefile  README.md  experiment_notes.txt  project_notes.txt  pyproject.toml  requirements.txt
datasets_creator/: kaggle_data_exploration.ipynb
datasets_creator/src/: constants.py  generate_curated_datasets.ipynb  generate_dataset.py  utils.py
multilingual_chatbot_arena/: __init__.py
multilingual_chatbot_arena/inference/: config.py  inference_gpu.py  load_constants.sh  utils.py
multilingual_chatbot_arena/train/: config.py  data_preparation.py  main.py  metrics.py  trainer.py  trainer_utils.py
tests/: zero_shot_inference.ipynb
