[project]
name = "wsdm-cup-kjmg"
version = "0.1.0"
description = "This package provides a set up to fine-tune LLMs to assess which fellow LLM response is better. This project was inspired by Kaggle's competition: WSDM Cup"
authors = [
    {name = "kevinmedinag96",email = "kevinmedinag96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "unsloth (==2025.2.4)",
    "flash-attn (==2.7.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opik (>=1.4.10,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
